--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -59,7 +59,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label">备注</label>
         <div class="layui-input-inline">
-            <input type="text" name="remark" required lay-verify="required" placeholder="请输入备注信息" autocomplete="off"
+            <input type="text" name="remark"  lay-verify="" placeholder="请输入备注信息" autocomplete="off"
                    class="layui-input">
         </div>
     </div>
@@ -123,7 +123,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label">备注</label>
         <div class="layui-input-inline">
-            <input type="text" name="remark" required lay-verify="required" placeholder="请输入备注信息" autocomplete="off"
+            <input type="text" name="remark"  lay-verify="" placeholder="请输入备注信息" autocomplete="off"
                    class="layui-input">
         </div>
     </div>
