--- a/src/main/resources/templates/custom.html
+++ b/src/main/resources/templates/custom.html
@@ -255,6 +255,9 @@
                         content: $('#addCustomForm')//这里content是一个DOM，注意：最好该元素要存放在body最外层，否则可能被其它的相对元素所影响
                     });
                     break;
+                case 'insertCustom':
+                    layer.msg('导入');
+                    break;
             }
             ;
         });
@@ -312,7 +315,6 @@
                     } else {
                         layer.msg(ret.msg, {icon: 5});
                     }
-
                 }
             })
             return false; //阻止表单跳转。如果需要表单跳转，去掉这段即可。
@@ -377,6 +379,7 @@
                 }
             });
         })
+
 
     });
 </script>
