--- a/src/main/resources/templates/business.html
+++ b/src/main/resources/templates/business.html
@@ -211,7 +211,13 @@
     </div>
 </form>
 <table id="customTable" lay-filter="customFilter"></table>
+<div class="layui-col-md12">
+    <div class="layui-card">
+        <div class="layui-card-body">
 <table id="businessTable" lay-filter="test"></table>
+        </div>
+    </div>
+</div>
 </body>
 <!--商标类别弹窗-->
 <form class="layui-form" action="" id="trademarkTypeSelect"
