--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -35,7 +35,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label">登录名</label>
         <div class="layui-input-block">
-            <input type="text" name="loginName" placeholder="请输入登录名" required lay-verify="required" autocomplete="off"
+            <input type="text" name="loginName" id="loginName" placeholder="请输入登录名" required lay-verify="required" autocomplete="off"
                    class="layui-input">
         </div>
     </div>
@@ -110,7 +110,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label">登录名</label>
         <div class="layui-input-block">
-            <input type="text" name="loginName" placeholder="请输入登录名" required lay-verify="required" autocomplete="off"
+            <input type="text" name="loginName" placeholder="请输入登录名" readonly required lay-verify="required" autocomplete="off"
                    class="layui-input">
         </div>
     </div>
@@ -331,6 +331,9 @@
                 case 'add':
                     //将表单清空
                     document.getElementById("addUserForm").reset();
+                    //将登录名的input颜色变为正常
+                    let loginInput = document.getElementById("loginName");
+                    loginInput.style="";
                     var $input = $("input[name=role]");
                     for (let j = 0; j < $input.length; j++) {
                         $input[j].checked = false
@@ -582,6 +585,18 @@
             })
             return false; //阻止表单跳转。如果需要表单跳转，去掉这段即可。
         });
+
+        //鼠标失焦判断用户名是否存在
+        $("#loginName").blur(function(){
+            var loginName = this.value;
+            var loginInput = document.getElementById("loginName");
+            $.get('/user/checkLoginName',{loginName:loginName},function (data) {
+                if(data==='false'){
+                    loginInput.style="border-color: red";
+                    layer.msg('['+loginName+']登录名已经被占用',{icon: 5});//!,ok,wrong,question,lock,cry,smile
+                }
+            });
+        })
     });
 </script>
 </html>
