--- a/src/main/resources/templates/visit.html
+++ b/src/main/resources/templates/visit.html
@@ -82,7 +82,13 @@
 
 <body>
 <table id="customTable" lay-filter="customFilter"></table>
-<table id="demo" lay-filter="test"></table>
+<div class="layui-col-md12">
+    <div class="layui-card">
+        <div class="layui-card-body">
+            <table id="demo" lay-filter="test"></table>
+        </div>
+    </div>
+</div>
 </body>
 
 <script>
