--- a/src/main/resources/templates/custom.html
+++ b/src/main/resources/templates/custom.html
@@ -236,7 +236,8 @@
                     , {field: 'createTime', title: '创建时间', align: 'center', width: 160}
                     , {field: 'updateBy', title: '修改人', align: 'center', width: 120}
                     , {field: 'updateTime', title: '修改时间', align: 'center', width: 160}
-                    , {field: 'proxyId', title: '代理人ID', align: 'center', width: 120}
+                    , {field: 'proxyId', title: '代理人ID', align: 'center', width: 120,hide:true}
+                    , {field: 'userName', title: '代理人', align: 'center', width: 120}
                     , {field: 'remark', title: '备注', align: 'center', width: 120}
                     , {fixed: 'right', align: 'center', title: '操作', toolbar: '#barDemo', width: 220}
                 ]
