--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
-        <div class="layui-logo" style="font-size: x-large;margin-left: 1%">商标注册管理系统</div>
+        <a id="logo" href="/goto/toIndex"><div class="layui-logo" style="font-size: x-large;margin-left: 1%">商标注册管理系统</div></a>
         <ul class="layui-nav layui-layout-right">
             <li class="layui-nav-item">
                 <a href="javascript:;">
@@ -45,7 +45,7 @@
 
     <div class="layui-body">
         <!-- 内容主体区域 -->
-        <iframe id="iframeMain" src="/goto/toUser" class="layadmin-iframe" frameborder="0"
+        <iframe id="iframeMain" src="/goto/toIndex" class="layadmin-iframe" frameborder="0"
                 style="width: 100%;height: 100%"></iframe>
     </div>
 
@@ -67,6 +67,12 @@
                 //阻断超链接的跳转事件
                 event.preventDefault();
                 //取得超链接对象的href属性值赋给iframe的src属性
+                $("#iframeMain").attr("src", $(this).attr("href"));
+            })
+            //点击logo到首页
+            $("#logo").click(function (event) {
+                //阻断超链接的跳转事件
+                event.preventDefault();
                 $("#iframeMain").attr("src", $(this).attr("href"));
             })
         })
