--- a/src/main/resources/templates/homeIndex.html
+++ b/src/main/resources/templates/homeIndex.html
@@ -3,8 +3,199 @@
 <head>
     <meta charset="UTF-8">
     <title>首页</title>
+    <link rel="stylesheet" href="/layui/css/layui.css" media="all">
+    <script src="/layui/layui.js"></script>
+    <script src="/echarts/echarts.js"></script>
+    <script src="/echarts/chalk.js"></script>
 </head>
-<body>
-
+<body style="background-color: rgb(57,61,73)">
+<div style="margin: 5%">
+    <div id="businessCount" style="width: 40%;height:700px; float: left"></div>
+    <div id="performanceRanking" style="width: 60%;height:700px; float: right"></div>
+</div>
 </body>
+<script>
+    layui.use(['jquery'], function () {
+        var $=layui.jquery;
+        //业务量走势图
+        $.ajax({
+            url: "/business/showBusinessChart",
+            type: "GET",
+            dataType: "JSON",
+            success: function (data) {
+                if (data.code == 0) {
+                    //获取横坐标
+                    var monthX = data.data.monthX;
+                    // 获取y坐标1
+                    var businessCountY= data.data.businessCountY;
+                    // 获取y坐标2
+                    // var moneys=data.data.moneys;
+                    // 基于准备好的dom，初始化echarts实例
+                    var myChart = echarts.init(document.getElementById('businessCount'),'chalk');
+                    // 指定图表的配置项和数据
+                    var option = {
+                        title: {
+                            text: '业务量走势图',
+                            subtext: '业务量'
+                        },
+                        tooltip: {
+                            trigger: 'axis'
+                        },
+                        legend: {
+                            data: ['业务量']
+                        },
+                        toolbox: {
+                            show: true,
+                            feature: {
+                                dataView: {show: true, readOnly: false},
+                                magicType: {show: true, type: ['line', 'bar']},
+                                restore: {show: true},
+                                saveAsImage: {show: true}
+                            }
+                        },
+                        calculable: true,
+                        xAxis: [
+                            {
+                                type: 'category',
+                                data: monthX
+                            }
+                        ],
+                        yAxis: [
+                            {
+                                type: 'value'
+                            }
+                        ],
+                        series: [
+                            {
+                                name: '业务量',
+                                type: 'bar',
+                                data: businessCountY,
+                                markPoint: {
+                                    data: [
+                                        {type: 'max', name: '最大值'},
+                                        {type: 'min', name: '最小值'}
+                                    ]
+                                },
+                                markLine: {
+                                    data: [
+                                        {type: 'average', name: '平均值'}
+                                    ]
+                                }
+                            }
+                        ]
+                    };
+                    // 使用刚指定的配置项和数据显示图表。
+                    myChart.setOption(option);
+                }
+            }
+        });
+
+        //业绩排行榜
+        $.ajax({
+            url: "/business/showPerformanceRanking",
+            type: "GET",
+            dataType: "JSON",
+            success: function (data) {
+                if (data.code == 0) {
+                    //获取横坐标
+                    var moneyX = data.data.moneyX;
+                    // 获取y坐标1
+                    var loginNameY= data.data.loginNameY;
+                    // 获取y坐标2
+                    // var moneys=data.data.moneys;
+                    // 基于准备好的dom，初始化echarts实例
+                    var myChart1 = echarts.init(document.getElementById('performanceRanking'),'chalk');
+                    // 指定图表的配置项和数据
+                    var option1 = {
+                        title: {
+                            text: '业绩排行榜',
+                            subtext: '业绩',
+                        },
+                        tooltip: {
+                            trigger: 'axis'
+                        },
+                        legend: {
+                            data: ['业绩']
+                        },
+                        toolbox: {
+                            show: true,
+                            feature: {
+                                dataView: {show: true, readOnly: false},
+                                magicType: {show: true, type: ['line', 'bar']},
+                                restore: {show: true},
+                                saveAsImage: {show: true}
+                            }
+                        },
+                        calculable: true,
+                        xAxis: [
+                            {
+                                type: 'category',
+                                data: moneyX
+                            }
+                        ],
+                        yAxis: [
+                            {
+                                type: 'value'
+                            }
+                        ],
+                        series: [
+                            {
+                                name: '业绩',
+                                type: 'bar',
+                                data: loginNameY,
+                                markPoint: {
+                                    data: [
+                                        {type: 'max', name: '最大值'},
+                                        {type: 'min', name: '最小值'}
+                                    ]
+                                },
+                                markLine: {
+                                    data: [
+                                        {type: 'average', name: '平均值'}
+                                    ]
+                                }
+                            }
+                        ]
+                    };
+                    // 使用刚指定的配置项和数据显示图表。
+                    myChart1.setOption(option1);
+                }
+            }
+        });
+    });
+
+    // 时间显示
+    function run(){
+        var time = new Date();//获取系统当前时间
+        var year = time.getFullYear();
+        var month = time.getMonth()+1;
+        var date= time.getDate();//系统时间月份中的日
+        var day = time.getDay();//系统时间中的星期值
+        var weeks = ["星期日","星期一","星期二","星期三","星期四","星期五","星期六"];
+        var week = weeks[day];//显示为星期几
+        var hour = time.getHours();
+        var minutes = time.getMinutes();
+        var seconds = time.getSeconds();
+        console.log(seconds);
+        if(month<10){
+            month = "0"+month;
+        }
+        if(date<10){
+            date = "0"+date;
+        }
+        if(hour<10){
+            hour = "0"+hour;
+        }
+        if(minutes<10){
+            minutes = "0"+minutes;
+        }
+        if(seconds<10){
+            seconds = "0"+seconds;
+        }
+        //var newDate = year+"年"+month+"月"+date+"日"+week+hour+":"+minutes+":"+seconds;
+        document.getElementById("show").innerHTML = year+"年"+month+"月"+date+"日"+week+hour+":"+minutes+":"+seconds;
+        setTimeout('run()',1000);
+    }
+    run();
+</script>
 </html>
