--- a/src/main/resources/templates/business.html
+++ b/src/main/resources/templates/business.html
@@ -21,7 +21,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label">申请号</label>
         <div class="layui-input-block">
-            <input type="text" name="applicantCode"  lay-verify="required" placeholder="请输入申请号"
+            <input type="text" name="applicantCode"  placeholder="请输入申请号"
                    autocomplete="off"
                    class="layui-input">
         </div>
@@ -106,7 +106,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label">申请号</label>
         <div class="layui-input-block">
-            <input type="number" name="applicantCode" required lay-verify="required" placeholder="请输入申请号"
+            <input type="number" name="applicantCode" placeholder="请输入申请号"
                    autocomplete="off"
                    class="layui-input">
         </div>
@@ -169,7 +169,7 @@
         </div>
         <label class="layui-form-label">备注</label>
         <div class="layui-input-inline">
-            <input type="text" name="remark" required lay-verify="required" placeholder="请输入备注" autocomplete="off"
+            <input type="text" name="remark" placeholder="请输入备注" autocomplete="off"
                    class="layui-input">
         </div>
     </div>
