--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,14 +26,14 @@
                 <form id="loginForm" action="/login" method="post" onsubmit="return checkLogin()">
                     <div class="input_outer">
                         <span class="u_user"></span>
-                        <input name="username" id="username" value="admin" class="text"
+                        <input name="username" id="username" class="text"
                                style="color: #FFFFFF !important" type="text"
                                placeholder="请输入用户名">
                     </div>
                     <div class="input_outer">
                         <span class="us_uer"></span>
                         <input name="password" id="password" class="text"
-                               style="color: #FFFFFF !important; position:absolute; z-index:100;" value="123456"
+                               style="color: #FFFFFF !important; position:absolute; z-index:100;"
                                type="password" placeholder="请输入密码">
                     </div>
                     <div class="input_outer">
